@@ -35,7 +35,7 @@
 # include "getopts.h"
 
 
-# define POCC_NB_OPTS				57
+# define POCC_NB_OPTS				58
 
 
 # define POCC_OPT_HELP				0
@@ -74,32 +74,33 @@
 # define POCC_OPT_PLUTO_PREVECTOR		29
 # define POCC_OPT_PLUTO_MULTIPIPE		30
 # define POCC_OPT_PLUTO_RAR			31
-# define POCC_OPT_PLUTO_LASTWRITER		32
-# define POCC_OPT_PLUTO_SCALPRIV		33
-# define POCC_OPT_PLUTO_BEE			34
-# define POCC_OPT_PLUTO_QUIET			35
-# define POCC_OPT_PLUTO_FT			36
-# define POCC_OPT_PLUTO_LT			37
-# define POCC_OPT_PLUTO_EXTERNAL_CANDL	       	38
+# define POCC_OPT_PLUTO_RAR_CF			32
+# define POCC_OPT_PLUTO_LASTWRITER		33
+# define POCC_OPT_PLUTO_SCALPRIV		34
+# define POCC_OPT_PLUTO_BEE			35
+# define POCC_OPT_PLUTO_QUIET			36
+# define POCC_OPT_PLUTO_FT			37
+# define POCC_OPT_PLUTO_LT			38
+# define POCC_OPT_PLUTO_EXTERNAL_CANDL	       	39
 
-# define POCC_OPT_NOCODEGEN			39
-# define POCC_OPT_CLOOG_F			40
-# define POCC_OPT_CLOOG_L			41
-# define POCC_OPT_PRAGMATIZER			42
-# define POCC_OPT_VECTORIZER			43
-# define POCC_OPT_VECT_MARK_PAR_LOOPS    	44
-# define POCC_OPT_VECT_NO_KEEP_OUTER_PAR_LOOPS  45
-# define POCC_OPT_VECT_SINK_ALL_LOOPS		46
-# define POCC_OPT_STORCOMPACT			47
-# define POCC_OPT_AC_KEEP_OUTERPAR		48
-# define POCC_OPT_AC_KEEP_VECTORIZED		49
-# define POCC_OPT_CODEGEN_TIMERCODE		50
-# define POCC_OPT_CODEGEN_TIMER_ASM		51
-# define POCC_OPT_CODEGEN_TIMER_PAPI		52
-# define POCC_OPT_COMPILE      			53
-# define POCC_OPT_COMPILE_CMD          		54
-# define POCC_OPT_RUN_CMD_ARGS          	55
-# define POCC_OPT_PROGRAM_TIMEOUT        	56
+# define POCC_OPT_NOCODEGEN			40
+# define POCC_OPT_CLOOG_F			41
+# define POCC_OPT_CLOOG_L			42
+# define POCC_OPT_PRAGMATIZER			43
+# define POCC_OPT_VECTORIZER			44
+# define POCC_OPT_VECT_MARK_PAR_LOOPS    	45
+# define POCC_OPT_VECT_NO_KEEP_OUTER_PAR_LOOPS  46
+# define POCC_OPT_VECT_SINK_ALL_LOOPS		47
+# define POCC_OPT_STORCOMPACT			48
+# define POCC_OPT_AC_KEEP_OUTERPAR		49
+# define POCC_OPT_AC_KEEP_VECTORIZED		50
+# define POCC_OPT_CODEGEN_TIMERCODE		51
+# define POCC_OPT_CODEGEN_TIMER_ASM		52
+# define POCC_OPT_CODEGEN_TIMER_PAPI		53
+# define POCC_OPT_COMPILE      			54
+# define POCC_OPT_COMPILE_CMD          		55
+# define POCC_OPT_RUN_CMD_ARGS          	56
+# define POCC_OPT_PROGRAM_TIMEOUT        	57
 
 
 BEGIN_C_DECLS
